# RoboCup-Home

./: command.txt  personFollow.7z  readme.md  todo.md
find_person/preprocessing_pointcloud/: CMakeLists.txt  package.xml
find_person/preprocessing_pointcloud/include/: preprocessing_pointcloud.h
find_person/preprocessing_pointcloud/launch/: preprocessing_pointcloud.launch
find_person/preprocessing_pointcloud/src/: preprocessing_pointcloud.cpp
find_person/preprocessing_pointcloud/src/applications/: preprocessing_pointcloud_node.cpp
move_to_object/: CMakeLists.txt  package.xml
move_to_object/config/: param.yaml
move_to_object/launch/: move_to_object.launch
move_to_object/scripts/: move_to_object.py
navigation_to_person/: CMakeLists.txt  package.xml
navigation_to_person/config/: param.yaml
navigation_to_person/launch/: navigation_to_person.launch
navigation_to_person/scripts/: navigation_to_person.py
object_labeling/include/object_labeling/: object_labeling.h
object_labeling/launch/: object_labeling.launch
object_labeling/src/: object_labeling.cpp
object_labeling/src/applications/: object_labeling_node.cpp
tiago_move/: CMakeLists.txt  package.xml
tiago_move/include/tiago_move/: controller.h
tiago_move/launch/: tiago_move.launch
tiago_move/launch/config/: config.yaml
tiago_move/src/: tiago_move_node.cpp
